# IPC

IPC/balance_robot/: package.xml
IPC/balance_robot/include/: balance_controller.h  motor_driver.h
IPC/balance_robot/launch/: balance.launch
IPC/balance_robot/src/: balance_node.cpp  motor_driver.cpp
balance_mpc/: CMakeLists.txt
balance_mpc/include/: motor_driver.h
balance_mpc/include/balance_mpc/: mpu6050_linux.h
balance_mpc/src/: balance_controller.cpp  balance_node.cpp  mpu6050_linux.cpp
