<?xml version="1.0"?>
<package format="2">
  <name>balance_mpc</name>
  <version>0.1.0</version>
  <description>Two-wheeled balancing robot controller using LQR</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Additional dependencies for hardware interface -->
  <build_depend>rosserial_arduino</build_depend>
  <exec_depend>rosserial_arduino</exec_depend>
</package> 